added some more details

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,5 +1,13 @@
 {{page-header}}
 <div local-class="body">
+  <p local-class="text">
+    Shane is a software developer from Dublin who has experience working in frontend,
+    android, and desktop development. His main languages are java and javascript.
+    He graduated from DCU in 2017 with a 2.1 and worked for a year as a graduate in
+    Phorest Salon Software.<br><br>
+    He has a passion for technology and programming, and he is very driven and motivated
+    to refine his craft and become the best developer he can be.<br><br>
+  </p>
   <img local-class="image" src="images/openet.jpeg">
   <p local-class="caption">
     Shane being presented with an Ipad by the CEO of Openet, Joe Hogan. He was awarded this
