--- a/app/styles/experience.css
+++ b/app/styles/experience.css
@@ -5,7 +5,7 @@
 .card {
   margin-left: 40px;
   margin-bottom: 40px;
-  width: 800px;
+  width: 600px;
   border:1px solid #f4f4f4;
   box-shadow: 2px 0.5px 5px 0px rgba(152,157,173,1);
   border-radius:3px;
@@ -43,7 +43,8 @@
 }
 
 .details {
-  font-weight: 300;
+  font-size: 13px;
+  font-weight: 500;
   color: #636262;
   margin: 0;
   padding: 20px;
