--- a/app/templates/experience.hbs
+++ b/app/templates/experience.hbs
@@ -16,12 +16,12 @@
       <img local-class="logo" src="images/phorest-logo.png">
     </div>
     <p local-class="details">
-      I worked on moving features from the old Java Swing desktop app to web. The new web features were built using the Ember Javascript framework.<br>
-      Built new features in Android app using Java 8 and Android Studio.<br>
-      Built new features in desktop app using Java 8 and Swing.<br>
-      Worked on debugging and fixing support issues in the desktop, android and web apps.<br>
-      Wrote unit, integration and acceptance tests for my code.<br>
-      Working as part of a team using scrum and agile methodologies, attending daily stand ups, contributing to product backlogs and sprint planning and using Github to control source code, using pull requests to ensure code quality and standards.<br>
+      I worked on moving features from the old Java Swing desktop app to web. The new web features were built using the Ember Javascript framework.<br><br>
+      Built new features in Android app using Java 8 and Android Studio.<br><br>
+      Built new features in desktop app using Java 8 and Swing.<br><br>
+      Worked on debugging and fixing support issues in the desktop, android and web apps.<br><br>
+      Wrote unit, integration and acceptance tests for my code.<br><br>
+      Working as part of a team using scrum and agile methodologies, attending daily stand ups, contributing to product backlogs and sprint planning and using Github to control source code, using pull requests to ensure code quality and standards.<br><br>
     </p>
   </div>
   <h1 local-class="year">
@@ -40,9 +40,9 @@
       <img local-class="logo" src="images/aviva-logo.png">
     </div>
     <p local-class="details">
-      Worked as part of a team on several software projects<br>
-      Worked with agile methodologies and attended daily scrum meetings<br>
-      Wrote automated web tests using Cucumber - BDD<br>
+      Worked as part of a team on several software projects<br><br>
+      Worked with agile methodologies and attended daily scrum meetings<br><br>
+      Wrote automated web tests using Cucumber - BDD<br><br>
       Software testing with Junit
     </p>
   </div>
