--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,6 +1,12 @@
 {{page-header}}
 <body local-class="body">
-  <h1 local-class="email">
-    Email: sgoneill89@gmail.com
-  </h1>
+  <a local-class="link" href="mailto:sgoneill89@gmail.com">
+    <img local-class="gmail-icon" src="images/gmail.png">
+  </a>
+  <a local-class="link" href="https://github.com/ShaneON">
+    <img local-class="github-icon" src="images/github.png">
+  </a>
+  <a local-class="link" href="https://linkedin.com/in/shane-o-neill-7b133511b">
+    <img local-class="linkedin-icon" src="images/linkedin.png">
+  </a>
 </body>
