--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -3,10 +3,12 @@
   <p local-class="text">
     Shane is a software developer from Dublin who has experience working in frontend,
     android, and desktop development. His main languages are java and javascript.
-    He graduated from DCU in 2017 with a 2.1 and worked for a year as a graduate in
-    Phorest Salon Software.<br><br>
+    He graduated from DCU in 2017 with a 2.1 and worked for a year as a graduate developer in
+    Phorest Salon Software.<br>
     He has a passion for technology and programming, and he is very driven and motivated
     to refine his craft and become the best developer he can be.<br><br>
+
+
   </p>
   <img local-class="image" src="images/openet.jpeg">
   <p local-class="caption">
