--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,12 +1,16 @@
 {{page-header}}
 <body local-class="body">
-  <a local-class="link" href="mailto:sgoneill89@gmail.com">
-    <img local-class="gmail-icon" src="images/gmail.png">
-  </a>
-  <a local-class="link" href="https://github.com/ShaneON">
-    <img local-class="github-icon" src="images/github.png">
-  </a>
-  <a local-class="link" href="https://linkedin.com/in/shane-o-neill-7b133511b">
-    <img local-class="linkedin-icon" src="images/linkedin.png">
-  </a>
+  <div local-class="content">
+    <div local-class="links">
+      <a local-class="link" href="mailto:sgoneill89@gmail.com">
+        <img local-class="gmail-icon" src="images/gmail.png">
+      </a>
+      <a local-class="link" href="https://github.com/ShaneON">
+        <img local-class="github-icon" src="images/github.png">
+      </a>
+      <a local-class="link" href="https://linkedin.com/in/shane-o-neill-7b133511b">
+        <img local-class="linkedin-icon" src="images/linkedin.png">
+      </a>
+    </div>
+  </div>
 </body>
