--- a/app/templates/experience.hbs
+++ b/app/templates/experience.hbs
@@ -1,49 +1,51 @@
 {{page-header}}
 <body local-class="body">
-  <h1 local-class="year">
-    Sept 2017 - Sept 2018
-  </h1>
-  <div local-class="card">
-    <div local-class="header">
-      <div local-class="header-title">
-        <h2 local-class="name">
-          Phorest
-        </h2>
-        <h3 local-class="position">
-          Graduate Software Developer
-        </h3>
+  <div local-class="content">
+    <h1 local-class="year">
+      Sept 2017 - Sept 2018
+    </h1>
+    <div local-class="card">
+      <div local-class="header">
+        <div local-class="header-title">
+          <h2 local-class="name">
+            Phorest
+          </h2>
+          <h3 local-class="position">
+            Graduate Software Developer
+          </h3>
+        </div>
+        <img local-class="logo" src="images/phorest-logo.png">
       </div>
-      <img local-class="logo" src="images/phorest-logo.png">
+      <p local-class="details">
+        I worked on moving features from the old Java Swing desktop app to web. The new web features were built using the Ember Javascript framework.<br><br>
+        Built new features in Android app using Java 8 and Android Studio.<br><br>
+        Built new features in desktop app using Java 8 and Swing.<br><br>
+        Worked on debugging and fixing support issues in the desktop, android and web apps.<br><br>
+        Wrote unit, integration and acceptance tests for my code.<br><br>
+        Working as part of a team using scrum and agile methodologies, attending daily stand ups, contributing to product backlogs and sprint planning and using Github to control source code, using pull requests to ensure code quality and standards.<br><br>
+      </p>
     </div>
-    <p local-class="details">
-      I worked on moving features from the old Java Swing desktop app to web. The new web features were built using the Ember Javascript framework.<br><br>
-      Built new features in Android app using Java 8 and Android Studio.<br><br>
-      Built new features in desktop app using Java 8 and Swing.<br><br>
-      Worked on debugging and fixing support issues in the desktop, android and web apps.<br><br>
-      Wrote unit, integration and acceptance tests for my code.<br><br>
-      Working as part of a team using scrum and agile methodologies, attending daily stand ups, contributing to product backlogs and sprint planning and using Github to control source code, using pull requests to ensure code quality and standards.<br><br>
-    </p>
-  </div>
-  <h1 local-class="year">
-    April 2016 - Sept 2016
-  </h1>
-  <div local-class="card">
-    <div local-class="header">
-      <div local-class="header-title">
-        <h2 local-class="name">
-          Aviva
-        </h2>
-        <h3 local-class="position">
-          Intern Software Developer
-        </h3>
+    <h1 local-class="year">
+      April 2016 - Sept 2016
+    </h1>
+    <div local-class="card">
+      <div local-class="header">
+        <div local-class="header-title">
+          <h2 local-class="name">
+            Aviva
+          </h2>
+          <h3 local-class="position">
+            Intern Software Developer
+          </h3>
+        </div>
+        <img local-class="logo" src="images/aviva-logo.png">
       </div>
-      <img local-class="logo" src="images/aviva-logo.png">
+      <p local-class="details">
+        Worked as part of a team on several software projects<br><br>
+        Worked with agile methodologies and attended daily scrum meetings<br><br>
+        Wrote automated web tests using Cucumber - BDD<br><br>
+        Software testing with Junit
+      </p>
     </div>
-    <p local-class="details">
-      Worked as part of a team on several software projects<br><br>
-      Worked with agile methodologies and attended daily scrum meetings<br><br>
-      Wrote automated web tests using Cucumber - BDD<br><br>
-      Software testing with Junit
-    </p>
   </div>
 </body>
