--- a/app/styles/experience.css
+++ b/app/styles/experience.css
@@ -1,9 +1,9 @@
 .body {
+  background-color: #fcfcfc;
   overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px;
 }
 
 .card {
@@ -31,6 +31,7 @@
   background-color: #f4f4f4;
   padding: 20px;
 }
+
 .name {
   font-weight: 500;
   font-size: 22px;
@@ -56,4 +57,15 @@
 
 .logo {
   width: 150px;
+}
+
+.content {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
+  width: 800px;
+  margin-top: 140px;
 }
