--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -1,10 +1,9 @@
 .body {
+  background-color: #fcfcfc;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding-top: 10px;
-  background-color: white;
 }
 
 .image {
@@ -24,4 +23,15 @@
   font-weight: 500;
   color: #636262;
   width: 600px;
+}
+
+.content {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
+  width: 800px;
+  margin-top: 140px;
 }
