--- a/app/styles/components/page-header.css
+++ b/app/styles/components/page-header.css
@@ -8,6 +8,16 @@
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
 }
 
+.sticky {
+  width: 100%;
+  position: fixed;
+  background-color: #518eba;
+  height: 50px;
+  padding: 0;
+  margin-bottom: 5px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+}
+
 .details {
   height: 90px;
   display: flex;
