--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,4 +1,5 @@
-{{page-header}}
+{{page-header
+  header=header}}
 <body local-class="body">
   <div local-class="content">
     <div local-class="links">
