--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,4 +1,5 @@
-{{page-header}}
+{{page-header
+  header=header}}
 <div local-class="body">
   <div local-class="content">
     <p local-class="text">
