--- a/app/styles/contact.css
+++ b/app/styles/contact.css
@@ -15,32 +15,41 @@
 }
 
 .github-icon {
-  width: 80px;
+  width: 100px;
 }
 
 .linkedin-icon {
-  margin-left: -100px;
-  width: 200px;
+  width: 180px;
 }
 
 .gmail-icon {
-  width: 140px;
+  margin-right: 20px;
+  width: 160px;
 }
 
-.link {
-  display: flex;
-  align-items: center;
+.github-icon-mobile {
+  margin-right: 10px;
+  width: 60px;
+}
+
+.linkedin-icon-mobile {
+  width: 110px;
+}
+
+.gmail-icon-mobile {
+  margin-right: 20px;
   width: 100px;
-  margin-left: 60px;
 }
 
 .links {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   margin-top: 50px;
 }
 
-.content {
+.content-desktop {
   padding-top: 20px;
   display: flex;
   align-items: flex-start;
@@ -48,6 +57,18 @@
   background-color: #fff;
   box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
   width: 800px;
+  height: 100%;
+  margin-top: 140px;
+}
+
+.content-mobile {
+  padding-top: 20px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
+  width: 100%;
   height: 100%;
   margin-top: 140px;
 }
