--- a/app/styles/experience.css
+++ b/app/styles/experience.css
@@ -7,9 +7,8 @@
 }
 
 .card {
-  margin-left: 40px;
   margin-bottom: 40px;
-  width: 600px;
+  width: 90%;
   border:1px solid #f4f4f4;
   box-shadow: 2px 0.5px 5px 0px rgba(152,157,173,1);
   border-radius:3px;
@@ -20,7 +19,7 @@
   color: #636262;
   margin: 0;
   margin-bottom: 20px;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .header {
@@ -34,15 +33,15 @@
 
 .name {
   font-weight: 500;
-  font-size: 22px;
+  font-size: 20px;
   color: #636262;
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .position {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   color: #636262;
   margin: 0;
 }
@@ -59,7 +58,7 @@
   width: 150px;
 }
 
-.content {
+.content-desktop {
   padding-top: 20px;
   display: flex;
   flex-direction: column;
@@ -67,5 +66,16 @@
   background-color: #fff;
   box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
   width: 800px;
+  margin-top: 140px;
+}
+
+.content-mobile {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
+  width: 100%;
   margin-top: 140px;
 }
