--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -7,13 +7,13 @@
 }
 
 .image {
-  width: 600px;
+  width: 70%;
   box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
 }
 
 .caption {
-  width: 550px;
-  font-size: 12px;
+  width: 60%;
+  font-size: 11px;
   margin-top: 15px;
   color: #969b9e;
 }
@@ -22,16 +22,27 @@
   font-size: 16px;
   font-weight: 500;
   color: #636262;
-  width: 600px;
+  width: 80%;
 }
 
-.content {
+.content-desktop {
   padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #fff;
   box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
-  width: 800px;
+  width: 60%;
+  margin-top: 140px;
+}
+
+.content-mobile {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
+  width: 100%;
   margin-top: 140px;
 }
