--- a/app/templates/experience.hbs
+++ b/app/templates/experience.hbs
@@ -1,7 +1,7 @@
 {{page-header
   header=header}}
 <body local-class="body">
-  <div local-class="content">
+  <div local-class="{{if isMobile "content-mobile" "content-desktop"}}">
     <h1 local-class="year">
       Sept 2017 - Sept 2018
     </h1>
