--- a/app/templates/components/page-header.hbs
+++ b/app/templates/components/page-header.hbs
@@ -18,7 +18,12 @@
     {{#link-to 'experience'
       class=(local-class "nav-item")
       activeClass=(local-class "active")}}
-      Experience
+      CV
+    {{/link-to}}
+    {{#link-to 'awards'
+      class=(local-class "nav-item")
+      activeClass=(local-class "active")}}
+      Awards
     {{/link-to}}
     {{#link-to 'contact'
       class=(local-class "nav-item")
