--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -4,21 +4,15 @@
 <div local-class="body">
   <div local-class="{{if isMobile "content-mobile" "content-desktop"}}">
     <p local-class="text">
-      Shane is a software developer from Dublin who has experience working in frontend,
-      android, and desktop development. His main languages are java and javascript.
-      He graduated from DCU in 2017 with a 2.1 and worked for a year as a graduate developer in
-      Phorest Salon Software.<br>
-      He has a passion for technology and programming, and he is very driven and motivated
-      to refine his craft and become the best developer he can be.<br><br>
+      Shane is a freelance software developer from Dublin who has experience working in frontend,
+      android, and desktop development. His main languages are java and javascript, and uses the
+      Ember javascript framework for frontend work.
+      He graduated from DCU in 2017 with a 2.1 and worked in both frontend and backend development
+      in industry.<br>
+      Shane has experience in both small and large companies having worked in a local Irish business
+      with a startup feel, a large insurance company, and also one of the biggest banks in the world.
 
-
-    </p>
-    <img local-class="image" src="images/openet.jpeg">
-    <p local-class="caption">
-      Shane being presented with an Ipad by the CEO of Openet, Joe Hogan. He was awarded this
-      for winning "Most Innovative Project" at DCU's 2017 final year project expo.
-      His project was a wearable technology navigation system for cyclists consisting
-      of an android app and an arduino.
+      <br><br>
     </p>
   </div>
 </div>
