--- a/app/styles/awards.css
+++ b/app/styles/awards.css
@@ -1,9 +1,39 @@
 .body {
   background-color: #fcfcfc;
-  overflow: auto;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.image {
+  width: 70%;
+  box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+  margin-top: 30px;
+}
+
+.caption {
+  width: 60%;
+  font-size: 11px;
+  margin-top: 15px;
+  color: #969b9e;
+  text-align: center;
+}
+
+.header {
+  text-align: center;
+  font-weight: 500;
+  color: #494949;
+  width: 70%;
+  margin: 5px;
+  margin-top: 20px;
+}
+
+.text {
+  font-size: 16px;
+  font-weight: 500;
+  color: #636262;
+  width: 70%;
 }
 
 .content-desktop {
@@ -13,7 +43,7 @@
   align-items: center;
   background-color: #fff;
   box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
-  width: 800px;
+  width: 60%;
   margin-top: 140px;
 }
 
