updated ember app version

--- a/app/templates/awards.hbs
+++ b/app/templates/awards.hbs
@@ -1,7 +1,7 @@
 {{page-header
-  header=header}}
+  header=this.header}}
 <body local-class="body">
-  <div local-class="{{if isMobile "content-mobile" "content-desktop"}}">
+  <div local-class="{{if this.isMobile "content-mobile" "content-desktop"}}">
     <h1 local-class="header"> DCU Final Year Project Expo </h1>
     <p local-class="text">
       Shane was awarded "Most Innovative Project" at DCU's 2017 final year project expo.
