--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,8 +1,7 @@
-{{log media.isMobile}}
 {{page-header
-  header=header}}
+  header=this.header}}
 <div local-class="body">
-  <div local-class="{{if isMobile "content-mobile" "content-desktop"}}">
+  <div local-class="{{if this.isMobile "content-mobile" "content-desktop"}}">
     <p local-class="text">
       Shane is a freelance software developer from Dublin who has experience working in frontend,
       android, and desktop development. His main languages are java and javascript, and uses the
