--- a/app/templates/components/page-header.hbs
+++ b/app/templates/components/page-header.hbs
@@ -1,5 +1,5 @@
-<div local-class="{{header}}">
-  {{#if (eq header "header")}}
+<div local-class="{{@header}}">
+  {{#if (eq @header "header")}}
     <div local-class="details">
       <h1 local-class="name">
         Shane O'Neill
@@ -10,7 +10,7 @@
     </div>
   {{/if}}
   <div local-class="nav-bar">
-    {{#link-to 'home'
+    <!-- {{#link-to 'home'
       class=(local-class "nav-item")
       activeClass=(local-class "active")}}
       Home
@@ -29,6 +29,18 @@
       class=(local-class "nav-item")
       activeClass=(local-class "active")}}
       Contact
-    {{/link-to}}
+    {{/link-to}} -->
+    <LinkTo @route="home" id="nav-link-1" local-class="nav-item">
+      Home
+    </LinkTo>
+    <LinkTo @route="experience" id="nav-link-2" local-class="nav-item">
+      CV
+    </LinkTo>
+    <LinkTo @route="awards" id="nav-link-3" local-class="nav-item">
+      Awards
+    </LinkTo>
+    <LinkTo @route="contact" id="nav-link-4" local-class="nav-item">
+      Contact
+    </LinkTo>
   </div>
 </div>
