--- a/app/templates/experience.hbs
+++ b/app/templates/experience.hbs
@@ -1,7 +1,7 @@
 {{page-header
-  header=header}}
+  header=this.header}}
 <body local-class="body">
-  <div local-class="{{if isMobile "content-mobile" "content-desktop"}}">
+  <div local-class="{{if this.isMobile "content-mobile" "content-desktop"}}">
      <img local-class="image" src="images/cv1.jpg" width="800px" height="1000px" />
      <img local-class="image" src="images/cv2.jpg" width="800px" height="1000px" />
   </div>
