--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -10,7 +10,8 @@
   font-size: 16px;
   font-weight: 500;
   color: #636262;
-  width: 70%;
+  width: 400px;
+  margin-right: 30px;
 }
 
 .content-desktop {
@@ -19,8 +20,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #fff;
-  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
-  width: 60%;
+  width: 100%;
   margin-top: 140px;
 }
 
@@ -33,4 +33,41 @@
   box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
   width: 100%;
   margin-top: 140px;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.animated-container {
+  height: 400px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img {
+  border-radius: 10px;
+  margin-right: 20px;
+}
+
+.thumbnail-container {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-slideshow {
+  width: 450px;
+}
+
+.img-slideshow-thumbnail {
+  width: 75px;
+  margin-left: 20px;
 }
