--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -8,7 +8,7 @@
 
 .text {
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 300;
   color: #636262;
   width: 400px;
   margin-right: 30px;
@@ -49,6 +49,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
+
+.animated-heading {
+  color: #636262;
+  letter-spacing: 1;
+  font-weight: 300;
 }
 
 .img {
