--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -1,4 +1,5 @@
 .body {
+  overflow-x: hidden;
   background-color: #fcfcfc;
   display: flex;
   align-items: center;
@@ -6,12 +7,13 @@
   flex-direction: column;
 }
 
-.text {
+.text-about {
   font-size: 16px;
   font-weight: 300;
   color: #636262;
   width: 400px;
   margin-right: 30px;
+  letter-spacing: 1px;
 }
 
 .content-desktop {
@@ -38,7 +40,7 @@
 .about-container {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: flex-start;
   width: 100%;
   margin-bottom: 10px;
 }
@@ -62,9 +64,10 @@
   z-index: 1;
 }
 
-.img {
+.img-about {
   border-radius: 10px;
   margin-right: 20px;
+  margin-left: 30px;
 }
 
 .thumbnail-container {
@@ -103,16 +106,18 @@
 
 .dividing-line-left {
   border-bottom: 1px solid #bbb;
-  width: 38%;
+  width: 42%;
   box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
   margin-left: 20px;
+  margin-bottom: 15px;
 }
 
 .dividing-line-right {
   border-bottom: 1px solid #bbb;
-  width: 38%;
+  width: 42%;
   box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
   margin-right: 20px;
+  margin-bottom: 15px;
 }
 
 .seperator-title {
@@ -144,12 +149,13 @@
 .header {
   position: absolute;
   width: 100%;
-  background-color: #211f1f;
+  background-color: #182945;
   height: 140px;
   padding: 0;
   margin-bottom: 5px;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
   z-index: 999;
+  letter-spacing: 1px;
 }
 
 .sticky {
@@ -161,6 +167,7 @@
   margin-bottom: 50px;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
   z-index: 999;
+  letter-spacing: 1px;
 }
 
 .details {
